[package]
name = "patchwork"
version = "0.1.0"
authors = ["Thomas Nguyen <thomas.nguyen.1197@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
# I added this for the service macro- if it's causing issues we can
# get rid of it and go back to the old way of creating services
paste = "0.1"
uuid = { version = "0.8", features = ["v4"] }
